- implemented GlobalExceptionHandler for catching all REST API errors and creating ErrorDto into response body (to provide further details about the error 400) - ErrorDto was defined into API_definition.yaml to have the model auto-generated by swagger - created new EligibilityApiException to be thrown when any error is caught during runtime. This specific exception has mapped the field `correlationId` in order to put it into the response header by GlobalExceptionHandler
